syntax = "proto3";

package wcharge_mqtt;

option go_package = "github.com/Miroshinsv/wcharge_mqtt/gen;gen";

service MqttMiddlewareV1{
    rpc PushPowerBank(CommandPush) returns (ResponsePush){};
    rpc ForcePushPowerBank(CommandPush) returns (ResponsePush){};
    rpc QueryInventory(CommandInventory) returns (ResponseInventory){};
    rpc QueryServerInformation(CommandServerInformation) returns (ResponseServerInformation){};
    rpc QueryCabinetAPN(CommandCabinetAPN) returns (ResponseCabinetAPN){};
    rpc QuerySIMCardICCID(CommandSIMCardICCID) returns (ResponseSIMCardICCID){};
    rpc QueryNetworkInformation(CommandNetworkInformation) returns (ResponseNetworkInformation){};
    rpc ResetCabinet(CommandResetCabinet) returns (ResponseResetCabinet){};
    
    rpc Subscribe(Device) returns (ResponseString){};
}

service MainServerV1 {
    rpc ReturnPowerBank(RequestReturnPowerBank) returns (ResponseReturnPowerBank){};
    rpc ReportCabinetLogin(RequestReportCabinetLogin) returns (ResponseReportCabinetLogin){};
}

// Subscribe
message ResponseString{
    string response = 1;
}

message Device {
    string cabinet = 1;
    string device_number = 2;
}

// Commands
message Command {
    Device device = 1;
    CommandType cmd_type = 2;
}

enum CommandType {
    FORCE_PUSH = 0; //11
    QUERY_THE_INVENTORY = 1; //13
    PUSH_POWER_BANK = 2; //15
    QUERY_CABINET_APN = 3; //17
    QUERY_SERVER_INFORMATION = 4; //18
    QUERY_SIM_CARD_ICCID = 5; //20
    REPLY_TO_RETURN_THE_POWER_BANK = 6; //22
    QUERY_CABINET_NETWORK_INFORMATION = 7; //24
    RESET_CABINET = 8; //25
}



// Push Power Bank (Force Push)
message RequestPush {
    uint32 rl_slot = 1;
    uint32 rl_seq = 2;
}

message CommandPush {
    RequestPush push = 1;
    Device device = 2;
}

message ResponsePush {
    uint32 rl_slot = 1;
    uint64 rl_pbid = 2;
    uint32 rl_result = 3;
    uint32 rl_code = 4;
    uint32 rl_lock = 5;
    uint32 rl_bottom = 6;
    uint32 rl_qoe = 7;
    uint32 rl_vol = 8;
    uint32 rl_cur = 9;
    uint32 rl_seq = 10;
}

// Query the inventory
message RequestInventory {
    uint32 rl_seq = 1;
}

message CommandInventory {
    RequestInventory invent = 1;
    Device device = 2;
}

message ResponseInventory {
    message OneSlotCheck{
        uint32 rl_slot = 1;
        uint32 rl_idok = 2;
        uint32 rl_lock = 3;
        uint32 rl_bottom = 4;
        uint32 rl_charge = 5;
        uint64 rl_pbid = 6;
        uint32 rl_lvl = 7;
        uint32 rl_vol = 8;
        uint32 rl_cur = 9;
        int32  rl_temp = 10;
        uint32 rl_code = 11;
        uint32 rl_reserve = 12;
    }

    uint32 rl_num = 1;
    repeated OneSlotCheck slot = 2;
    uint32 seq_id = 3;
}

// Query Server Information
message RequestServerInformation {
    uint32 rl_type = 1;
    uint32 rl_seq = 2;
}

message CommandServerInformation {
    RequestServerInformation server_info = 1;
    Device device = 2;
}

message ResponseServerInformation {
    uint32 rl_type = 1;
    string rl_add = 2;
    string rl_port = 3;
    uint32 rl_seq = 4;
}

// Query Cabinet APN
message RequestCabinetAPN {
    uint32 rl_index = 1;
    uint32 rl_seq = 2;
}

message CommandCabinetAPN {
    RequestCabinetAPN cabinet_apn = 1;
    Device device = 2;
}

message ResponseCabinetAPN {
    uint32 rl_index = 1;
    uint32 rl_valid = 2;
    string rl_mccmnc = 3;
    string rl_apn = 4;
    string rl_un = 5;
    string rl_pw = 6;
    uint32 rl_seq = 7;
}

// Query SIM Card ICCID
message RequestSIMCardICCID {
    uint32 rl_seq = 1;
}

message CommandSIMCardICCID {
    RequestSIMCardICCID iccid = 1;
    Device device = 2;
}

message ResponseSIMCardICCID {
    string rl_iccid = 1;
    string rl_imei = 2;
    uint32 rl_seq = 3;
}

// Query Network Information
message RequestNetworkInformation {
    uint32 rl_seq = 1;
}

message CommandNetworkInformation {
    RequestNetworkInformation net_info = 1;
    Device device = 2;
}

message ResponseNetworkInformation {
    uint32 rl_type = 1;
    uint32 rl_mode = 2;
    uint32 rl_status = 3;
    uint32 rl_conn = 4;
    uint64 rl_csq = 5;
    uint64 rl_rsrp = 6;
    uint64 rl_sinr = 7;
    uint64 rl_wifi = 8;
    uint32 rl_seq = 9;
}

// Reset Cabinet
message RequestResetCabinet {
    uint32 rl_seq = 1;
}

message CommandResetCabinet {
    RequestResetCabinet reset_cabinet = 1;
    Device device = 2;
}

message ResponseResetCabinet {
    uint32 rl_result = 1;
    uint32 rl_seq = 2;
}

// Reports !!!
// Return the Power Bank
message RequestReturnPowerBank {
    uint32 slot = 1;
    uint32 rl_lock = 2;
    uint32 rl_bottom = 3;
    uint64 rl_pdid = 4;
    uint32 rl_qoe = 5;
    uint64 rl_vol = 6;
    uint64 rl_cur = 7;
    uint32 rl_tmp = 8;
    uint32 rl_limited = 9;
    uint32 rl_code = 10;
    uint32 rl_seq = 11;
}

message PBReturnReportMsg{
    uint32 rl_slot = 1;
    uint32 rl_lock = 2;
    uint32 rl_bottom = 3;
    uint64 rl_pbid = 4;
    uint32 rl_lvl = 5;
    uint32 rl_vol = 6;
    uint32 rl_cur = 7;
    int32  rl_temp = 8;
    uint32 rl_limited = 9;
    uint32 rl_code = 10;
    uint32 rl_seq = 11;
}

message CommandReturnPowerBank {
    RequestReturnPowerBank return_power_bank = 1;
    Device device = 2;
}

message ResponseReturnPowerBank {
    uint32 rl_slot = 1;
    uint32 rl_result = 2;
    uint32 rl_seq = 3;
}

// Report Cabinet Login
message RequestReportCabinetLogin {
    uint32 rl_count = 1;
    uint32 rl_netmode = 2;
    uint32 rl_conn = 3;
    uint64 rl_csq = 4;
    uint64 rl_rsrp = 5;
    uint64 rl_sinr = 6;
    uint64 rl_wifi = 7;
    string rl_commsoftver = 8;
    string rl_commhardver = 9;
    string rl_iccid = 10;
    uint32 rl_seq = 11;
}

message CommandReportCabinetLogin {
    RequestReportCabinetLogin report_cabinet_login = 1;
    Device device = 2;
}

message ResponseReportCabinetLogin {
    bool flag = 1;
}

message CommandGetAllPowerbankHealthInformation{
    uint32 rl_seq = 1;
}

message ReplyGetAllPowerbankHealthInformation {
    uint32 rl_num = 1;
    uint32 rl_slot = 2;
    uint32 rl_read = 3;
    uint32 rl_vol = 4;
    uint32 rl_cur = 5;
    int32 rl_tem = 6;
    uint32 rl_health = 7;
    uint32 rl_cycle = 8;
    uint32 rl_softver = 9;
    uint32 rl_code = 10;
    uint32 rl_seq = 11;
}